--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,6 @@
   <body>
     <!--<h1><%= title %></h1>
     <p>Welcome to <%= title %></p>-->
-    <h1>{"message": "Welcome to DressStore application"}</h1>
+    <p><%= body %></p>
   </body>
 </html>
