Revert "second commit: screenshot of homepage changed"
This reverts commit e712e03ea7d85a35e98d8fc84dabf72797aaed29.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,6 @@
   <body>
     <!--<h1><%= title %></h1>
     <p>Welcome to <%= title %></p>-->
-    <p><%= body %></p>
+    <h1>{"message": "Welcome to DressStore application"}</h1>
   </body>
 </html>
