--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <!--<h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>-->
-    <h1>{"message": "Welcome to DressStore application"}</h1>
+    <h1><%= title %></h1>
+    <p>Welcome to <%= title %></p>
   </body>
 </html>
